2009-10-05  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #543570
	* generic.cs: Import predefined constraints correctly.

2009-10-02  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs: Don't crash on overloads with optional paremeters where
	arguments count overflows.
	
	* parameter.cs: Import optional parameter constants using optional
	value type.

2009-10-01  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Default is gmcs compiler.

2009-10-01  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Fixed few NRE.

2009-10-01  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay, driver.cs: Expose parser exception in verbose mode.

2009-09-30  Marek Safar  <marek.safar@gmail.com>

	* linq.cs, convert.cs, assign.cs, expression.cs, ecore.cs: Add
	ShimExpression, ImplicitCast.

2009-09-30  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #542959
	* delegate.cs: Emit correct delegate instance variable when there
	are static and non-static overloads.

2009-09-29  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, linq.cs, anonymous.cs, expression.cs, statement.cs,
	ecore.cs, cs-parser.jay: Unary expression dynamic compiler.

2009-09-28  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #542487
	* ecore.cs: Resolve extension methods hidden by properties.

2009-09-25  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: More dynamic binary expressions.

2009-09-22  Marek Safar  <marek.safar@gmail.com>

	* nullable.cs, expression.cs: Fixed null lifted conversion for
	bitwise enum operations.

2009-09-22  Marek Safar  <marek.safar@gmail.com>

	* convert.cs, ecore.cs: Fixed explicit unsafe coversion of long
	values in checked context.

2009-09-22  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: Fixed array index constant conversion.

2009-09-20  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: Do not crash when MemberLookup returns something
	that is not a MemberExpr here.   Report error 582 instead. 
