@@ -1,5 +1,10 @@
 2009-10-05  Marek Safar  <marek.safar@gmail.com>
 
+	* expression.cs: Equality comparison of generic parameter with
+	class constraint.
+
+2009-10-05  Marek Safar  <marek.safar@gmail.com>
+
 	A fix for bug #543570
 	* generic.cs: Import predefined constraints correctly.
 
